--- a/frontend/allpack/sound/sound.html
+++ b/frontend/allpack/sound/sound.html
@@ -113,12 +113,19 @@
         footer a:hover {
             color: #3498db;
         }
-        /* Custom Image Size */
-        .custom-image {
-            width: 300px; /* Set the width */
-            height: 200px; /* Set the height */
-            object-fit: cover; /* Ensure the image covers the area */
-            border-radius: 10px; /* Optional: Add rounded corners */
+              /* Custom Image Styling */
+            .custom-image {
+            width: 100%; /* Ensure the image takes the full width of its container */
+            height: 300px; /* Fixed height for consistency */
+            object-fit: cover; /* Ensure the image covers the entire area */
+            border-radius: 15px; /* Rounded corners for a modern look */
+            transition: transform 0.3s ease, box-shadow 0.3s ease; /* Smooth transitions */
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Subtle shadow for depth */
+        }
+
+        .custom-image:hover {
+            transform: scale(1.05); /* Slight zoom effect on hover */
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3); /* Enhanced shadow on hover */
         }
     </style>
 </head>
