--- a/test2.html
+++ b/test2.html
@@ -28,55 +28,28 @@
             background-color: #1a1a1a;
             color: #f0f0f0;
         }
-        .navbar {
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-        }
+       
         .display-4 {
             font-weight: bold;
-            color: #2c3e50;
+            color: #fdfeff;
         }
         .lead {
             color: #7f8c8d;
         }
 
-        /* Card Slider */
-        .card-slider .carousel-item {
-            padding: 20px;
+        /* Custom Image Styling */
+        .custom-image {
+            width: 100%; /* Ensure the image takes the full width of its container */
+            height: 300px; /* Fixed height for consistency */
+            object-fit: cover; /* Ensure the image covers the entire area */
+            border-radius: 15px; /* Rounded corners for a modern look */
+            transition: transform 0.3s ease, box-shadow 0.3s ease; /* Smooth transitions */
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Subtle shadow for depth */
         }
-        .card-slider .card {
-            border: none;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease;
-            border-radius: 10px;
-            margin: 0 10px;
-            width: 300px;
-            height: 400px;
-            display: flex;
-            flex-direction: column;
-        }
-        .card-slider .card:hover {
-            transform: scale(1.05);
-        }
-        .card-slider .card img {
-            height: 200px;
-            object-fit: cover;
-            border-top-left-radius: 10px;
-            border-top-right-radius: 10px;
-        }
-        .card-slider .card-body {
-            padding: 20px;
-            flex: 1;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-        }
-        .card-slider .card-title {
-            font-size: clamp(1rem, 2vw, 1.25rem);
-            font-weight: bold;
-            color: #2c3e50;
-        }
-        .card-slider .card-text {
-            color: #7f8c8d;
+
+        .custom-image:hover {
+            transform: scale(1.05); /* Slight zoom effect on hover */
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3); /* Enhanced shadow on hover */
         }
 
         /* Dark Mode Toggle */
@@ -95,29 +68,9 @@
 
         /* Responsive Design */
         @media (max-width: 768px) {
-            .card-slider .card {
-                width: 100%;
-                margin: 10px 0;
+            .custom-image {
+                height: 200px; /* Adjust height for smaller screens */
             }
-            .carousel-control-prev,
-            .carousel-control-next {
-                display: none;
-            }
-        }
-
-        /* Parallax Effect */
-        .parallax {
-            background-image: url('/frontend/allpack/sound/sounddata/sound1.jpg');
-            background-attachment: fixed;
-            background-position: center;
-            background-repeat: no-repeat;
-            background-size: cover;
-            height: 400px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: white;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
         }
     </style>
 </head>
@@ -156,106 +109,43 @@
     <section class="container my-5">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h1 class="display-4" data-aos="fade-up">Sound & Lighting Services</h1>
+                <h1 class="display-5" data-aos="fade-up">Sound & Lighting Services</h1>
                 <p class="lead" data-aos="fade-up" data-aos-delay="100">Transform your event with our professional sound and lighting solutions.</p>
             </div>
         </div>
 
-        <!-- Card-Style Gallery Slider -->
+        <!-- Sound Systems -->
         <div class="row mt-5">
-            <div class="col-md-12 text-center">
-                <h2 data-aos="fade-up">Our Work in Action</h2>
-                <p class="lead" data-aos="fade-up" data-aos-delay="100">Check out some of our recent projects.</p>
+            <div class="col-md-6" data-aos="fade-right">
+                <img src="/frontend/allpack/sound/sounddata/sound1.jpg" alt="Sound System" class="img-fluid rounded custom-image">
             </div>
-            <div class="col-md-12 card-slider" data-aos="fade-up">
-                <div id="cardCarousel" class="carousel slide" data-bs-ride="carousel">
-                    <!-- Carousel Indicators -->
-                    <div class="carousel-indicators">
-                        <button type="button" data-bs-target="#cardCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                        <button type="button" data-bs-target="#cardCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                        <button type="button" data-bs-target="#cardCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                    </div>
-                    <!-- Carousel Items -->
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <div class="d-flex justify-content-center">
-                                <div class="card">
-                                    <img src="/frontend/allpack/sound/sounddata/sound1.jpg" class="card-img-top" alt="Gallery Image 1">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Wedding Sound Setup</h5>
-                                        <p class="card-text">Perfect audio for your special day.</p>
-                                    </div>
-                                </div>
-                                <div class="card">
-                                    <img src="/frontend/allpack/sound/sounddata/sound2.jpg" class="card-img-top" alt="Gallery Image 2">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Event Lighting Design</h5>
-                                        <p class="card-text">Creating the perfect ambiance.</p>
-                                    </div>
-                                </div>
-                                <div class="card">
-                                    <img src="/frontend/allpack/sound/sounddata/sound3.jpg" class="card-img-top" alt="Gallery Image 3">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Corporate Event Setup</h5>
-                                        <p class="card-text">Professional sound and lighting for corporate events.</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <div class="d-flex justify-content-center">
-                                <div class="card">
-                                    <img src="/frontend/allpack/sound/sounddata/sound4.jpg" class="card-img-top" alt="Gallery Image 4">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Outdoor Event Setup</h5>
-                                        <p class="card-text">Perfect sound and lighting for outdoor events.</p>
-                                    </div>
-                                </div>
-                                <div class="card">
-                                    <img src="/frontend/allpack/sound/sounddata/sound5.jpg" class="card-img-top" alt="Gallery Image 5">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Stage Lighting</h5>
-                                        <p class="card-text">Dynamic lighting for stage performances.</p>
-                                    </div>
-                                </div>
-                                <div class="card">
-                                    <img src="/frontend/allpack/sound/sounddata/sound6.jpg" class="card-img-top" alt="Gallery Image 6">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Concert Setup</h5>
-                                        <p class="card-text">Professional sound and lighting for concerts.</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Custom Carousel Controls -->
-                    <button class="carousel-control-prev" type="button" data-bs-target="#cardCarousel" data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#cardCarousel" data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                    </button>
-                </div>
+            <div class="col-md-6" data-aos="fade-left" data-aos-delay="100">
+                <h2>Sound Systems</h2>
+                <p>Our state-of-the-art sound systems ensure crystal-clear audio for every moment of your event. Whether it's a wedding ceremony, reception, or corporate event, we provide tailored solutions to meet your needs.</p>
+                <ul class="list-unstyled">
+                    <li><i class="fas fa-check-circle text-primary"></i> High-quality speakers and microphones</li>
+                    <li><i class="fas fa-check-circle text-primary"></i> Wireless and wired setups</li>
+                    <li><i class="fas fa-check-circle text-primary"></i> Expert sound technicians</li>
+                </ul>
             </div>
         </div>
 
+        <!-- Lighting Design -->
         <div class="row mt-5">
-            <div class="col-md-12 text-center" data-aos="fade-up">
-                <h2>Why Choose Us?</h2>
-                <p>We combine cutting-edge technology with expert craftsmanship to deliver unforgettable experiences. Our team is dedicated to making your event seamless and spectacular.</p>
-                <a href="booking.html" class="btn btn-primary btn-lg">Book Now</a>
+            <div class="col-md-6 order-md-2" data-aos="fade-left">
+                <img src="/frontend/allpack/sound/sounddata/sound2.jpg" alt="Lighting Design" class="img-fluid rounded custom-image">
+            </div>
+            <div class="col-md-6 order-md-1" data-aos="fade-right" data-aos-delay="100">
+                <h2>Lighting Design</h2>
+                <p>Create the perfect ambiance with our professional lighting services. From elegant uplighting to dynamic stage lighting, we bring your vision to life.</p>
+                <ul class="list-unstyled">
+                    <li><i class="fas fa-check-circle text-primary"></i> Custom lighting designs</li>
+                    <li><i class="fas fa-check-circle text-primary"></i> LED and intelligent lighting</li>
+                    <li><i class="fas fa-check-circle text-primary"></i> Energy-efficient solutions</li>
+                </ul>
             </div>
         </div>
     </section>
-
-    <!-- Footer -->
-    <footer class="bg-dark text-light py-4 footer-animated">
-        <div class="container">
-            <!-- ... Footer content ... -->
-        </div>
-    </footer>
 
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
