--- a/frontend/allpack/sound/sound.html
+++ b/frontend/allpack/sound/sound.html
@@ -6,8 +6,6 @@
     <meta name="description" content="Professional sound and lighting services for weddings and events. Elevate your event with our state-of-the-art equipment and expert technicians.">
     <meta name="keywords" content="wedding sound, event lighting, sound systems, lighting design, professional event services">
     <meta name="author" content="Wedding Planner">
-    <link rel="stylesheet" href="/frontend/css/navbar.css">
-    <link rel="stylesheet" href="/frontend/css/footer.css">
     <title>Sound & Lighting Services - Wedding Planner</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
@@ -15,6 +13,8 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet" />
     <!-- AOS Animation Library -->
     <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="/frontend/css/navbar.css">
+    <link rel="stylesheet" href="/frontend/css/footer.css">
     <!-- Custom CSS -->
     <style>
         /* General Styles */
@@ -28,7 +28,6 @@
             background-color: #1a1a1a;
             color: #f0f0f0;
         }
-       
         .display-4 {
             font-weight: bold;
             color: #fdfeff;
@@ -65,7 +64,7 @@
         }
 
         .custom-card img {
-            height: 200px;
+            height: 300px; /* Increased height for images */
             object-fit: cover;
             border-top-left-radius: 10px;
             border-top-right-radius: 10px;
@@ -80,7 +79,7 @@
         }
 
         .custom-card .card-title {
-            font-size: 1.25rem;
+            font-size: 1.5rem; /* Increased font size for titles */
             font-weight: bold;
             color: #2c3e50;
             margin-bottom: 10px; /* Add spacing below the title */
@@ -88,7 +87,7 @@
 
         .custom-card .card-text {
             color: #7f8c8d;
-            font-size: 0.9rem; /* Adjust font size for better readability */
+            font-size: 1rem; /* Increased font size for text */
             line-height: 1.5; /* Improve line spacing */
             margin-bottom: 15px; /* Add spacing below the text */
         }
@@ -169,6 +168,14 @@
             filter: invert(1);
             width: 30px;
             height: 30px;
+        }
+
+        /* Expanded Slider Body */
+        .carousel-inner {
+            padding: 40px 0; /* Add padding to the slider */
+        }
+        .card-slider {
+            margin: 20px 0; /* Add margin to the slider container */
         }
     </style>
 </head>
@@ -254,6 +261,7 @@
                 <div id="cardCarousel" class="carousel slide" data-bs-ride="carousel">
                     <!-- Carousel Items -->
                     <div class="carousel-inner">
+                        <!-- First Slide -->
                         <div class="carousel-item active">
                             <div class="d-flex justify-content-center">
                                 <div class="card custom-card">
@@ -285,6 +293,7 @@
                                 </div>
                             </div>
                         </div>
+                        <!-- Second Slide -->
                         <div class="carousel-item">
                             <div class="d-flex justify-content-center">
                                 <div class="card custom-card">
@@ -314,9 +323,14 @@
                                         <p class="card-text">Professional sound and lighting for concerts.</p>
                                     </div>
                                 </div>
+                            </div>
+                        </div>
+                        <!-- Third Slide -->
+                        <div class="carousel-item">
+                            <div class="d-flex justify-content-center">
                                 <div class="card custom-card">
                                     <a href="/frontend/allpack/sound/sounddata/sound9.jpg">
-                                        <img src="/frontend/allpack/sound/sounddata/sound9.jpg" class="card-img-top" alt="Gallery Image 6">
+                                        <img src="/frontend/allpack/sound/sounddata/sound9.jpg" class="card-img-top" alt="Gallery Image 7">
                                     </a>
                                     <div class="card-body">
                                         <h5 class="card-title">Concert Setup</h5>
@@ -325,7 +339,16 @@
                                 </div>
                                 <div class="card custom-card">
                                     <a href="/frontend/allpack/sound/sounddata/sound10.jpg">
-                                        <img src="/frontend/allpack/sound/sounddata/sound10.jpg" class="card-img-top" alt="Gallery Image 6">
+                                        <img src="/frontend/allpack/sound/sounddata/sound10.jpg" class="card-img-top" alt="Gallery Image 8">
+                                    </a>
+                                    <div class="card-body">
+                                        <h5 class="card-title">Concert Setup</h5>
+                                        <p class="card-text">Professional sound and lighting for concerts.</p>
+                                    </div>
+                                </div>
+                                <div class="card custom-card">
+                                    <a href="/frontend/allpack/sound/sounddata/sound10.jpg">
+                                        <img src="/frontend/allpack/sound/sounddata/sound10.jpg" class="card-img-top" alt="Gallery Image 8">
                                     </a>
                                     <div class="card-body">
                                         <h5 class="card-title">Concert Setup</h5>
@@ -357,52 +380,54 @@
             </div>
         </div>
     </section>
-
-    <!-- Footer -->
-    <footer class="bg-dark text-light py-4 footer-animated">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4">
-                    <h5>About Us</h5>
-                    <p class="footer-content">We are a dedicated team of event planners, committed to creating unforgettable experiences. From weddings to corporate events, we handle every detail with care and expertise.</p>
-                </div>
-                <div class="col-md-4">
-                    <h5>Quick Links</h5>
-                    <ul class="list-unstyled footer-content">
-                        <li><a href="home.htm" class="text-light">Home</a></li>
-                        <li><a href="#" class="text-light">About</a></li>
-                        <li><a href="#" class="text-light">Services</a></li>
-                        <li><a href="index.html" class="text-light">Packages</a></li>
-                        <li><a href="#" class="text-light">Contact</a></li>
-                    </ul>
-                </div>
-                <div class="col-md-4">
-                    <h5>Connect With Us</h5>
-                    <ul class="list-unstyled footer-content">
-                        <li><a href="#" class="text-light"><i class="fab fa-facebook-f"></i> Facebook</a></li>
-                        <li><a href="#" class="text-light"><i class="fab fa-twitter"></i> Twitter</a></li>
-                        <li><a href="#" class="text-light"><i class="fab fa-instagram"></i> Instagram</a></li>
-                        <li><a href="#" class="text-light"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
-                    </ul>
-                </div>
+<!-- Footer -->
+<footer class="bg-dark text-light py-4 footer-animated">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <h5>About Us</h5>
+                <p class="footer-content">We are a dedicated team of event planners, committed to creating unforgettable experiences. From weddings to corporate events, we handle every detail with care and expertise.</p>
             </div>
-            <div class="text-center mt-4">
-                <p class="footer-content">&copy; 2025 Wedding Planner. All Rights Reserved.</p>
+            <div class="col-md-4">
+                <h5>Quick Links</h5>
+                <ul class="list-unstyled footer-content">
+                    <li><a href="home.htm" class="text-light">Home</a></li>
+                    <li><a href="#" class="text-light">About</a></li>
+                    <li><a href="#" class="text-light">Services</a></li>
+                    <li><a href="index.html" class="text-light">Packages</a></li>
+                    <li><a href="#" class="text-light">Contact</a></li>
+                </ul>
+            </div>
+            <div class="col-md-4">
+                <h5>Connect With Us</h5>
+                <ul class="list-unstyled footer-content">
+                    <li><a href="#" class="text-light"><i class="fab fa-facebook-f"></i> Facebook</a></li>
+                    <li><a href="#" class="text-light"><i class="fab fa-twitter"></i> Twitter</a></li>
+                    <li><a href="#" class="text-light"><i class="fab fa-instagram"></i> Instagram</a></li>
+                    <li><a href="#" class="text-light"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
+                </ul>
             </div>
         </div>
-    </footer>
+        <div class="text-center mt-4">
+            <p class="footer-content">&copy; 2025 Wedding Planner. All Rights Reserved.</p>
+        </div>
+    </div>
+</footer>
 
-    <!-- Scripts -->
-    <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
-    <script>
-        AOS.init();
-
-        // Dark Mode Toggle
-        function toggleDarkMode() {
-            document.body.classList.toggle('dark-mode');
-        }
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+<!-- Scripts -->
+<script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+<script
+    src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+    crossorigin="anonymous"
+></script>
+<script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+    integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+    crossorigin="anonymous"
+></script>
+<script>
+    AOS.init();
+</script>
 </body>
 </html>
