--- a/frontend/allpack/photographers/photographers.html
+++ b/frontend/allpack/photographers/photographers.html
@@ -1,4 +1,4 @@
-design video 2 the image of video have big size for height"<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -44,8 +44,8 @@ design video 2 the image of video have big size for height"<!DOCTYPE html>
         
         /* Hero Section */
         .hero-section {
-            background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://images.unsplash.com/photo-1523438885200-e635ba2c371e?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80') no-repeat center center/cover;
-            min-height: 70vh;
+            background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('/frontend/allpack/photographers/photoimage/camera-7698836_1280.jpg') no-repeat center center/cover;
+            min-height: 80vh;
             display: flex;
             align-items: center;
             color: white;
@@ -328,8 +328,8 @@ design video 2 the image of video have big size for height"<!DOCTYPE html>
                 <div class="col-md-4 col-sm-6" data-aos="fade-up" data-aos-delay="100">
                     <div class="gallery-img-container">
                         <span class="media-badge video-badge">Video</span>
-                        <video poster="https://images.unsplash.com/photo-1515934751635-c81c6bc9a2d8?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" class="gallery-img">
-                            <source src="/frontend/allpack/indinzi/video_asset/agacyecuru.mp4" type="video/mp4">
+                        <video poster="/frontend/allpack/photographers/photoimage/Screenshot from 2025-03-26 14-42-55.png" class="gallery-img">
+                            <source src="/frontend/allpack/photographers/datavand/v2.mp4" type="video/mp4">
                         </video>
                         <div class="video-play-btn">
                             <i class="fas fa-play"></i>
@@ -357,7 +357,7 @@ design video 2 the image of video have big size for height"<!DOCTYPE html>
                 <div class="col-md-4 col-sm-6" data-aos="fade-up">
                     <div class="gallery-img-container">
                         <span class="media-badge video-badge">Video</span>
-                        <video poster="/frontend/allpack/photographers/Screenshot from 2025-03-25 14-17-21.png" class="gallery-img">
+                        <video poster="/frontend/allpack/photographers/photoimage/Screenshot from 2025-03-25 14-17-21.png" class="gallery-img">
                             <source src="/frontend/allpack/photographers/datavand/1v.mp4" type="video/mp4">
                         </video>
                         <div class="video-play-btn">
@@ -386,8 +386,8 @@ design video 2 the image of video have big size for height"<!DOCTYPE html>
                 <div class="col-md-4 col-sm-6" data-aos="fade-up" data-aos-delay="200">
                     <div class="gallery-img-container">
                         <span class="media-badge video-badge">Video</span>
-                        <video poster="https://images.unsplash.com/photo-1519225421980-715cb0215aed?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" class="gallery-img">
-                            <source src="https://www.youtube.com/embed/dQw4w9WgXcQ" type="video/mp4">
+                        <video poster="/frontend/allpack/photographers/photoimage/img3.png" class="gallery-img">
+                            <source src="/frontend/allpack/photographers/datavand/v3.mp4" type="video/mp4">
                         </video>
                         <div class="video-play-btn">
                             <i class="fas fa-play"></i>
@@ -732,4 +732,4 @@ design video 2 the image of video have big size for height"<!DOCTYPE html>
         });
     </script>
 </body>
-</html>"
+</html>
