--- a/frontend/allpack/photographers/photographers.html
+++ b/frontend/allpack/photographers/photographers.html
@@ -316,7 +316,7 @@
                 <div class="col-md-4 col-sm-6" data-aos="fade-up">
                     <div class="gallery-img-container">
                         <span class="media-badge photo-badge">Photo</span>
-                        <img src="https://images.unsplash.com/photo-1519225421980-715cb0215aed?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Wedding couple dancing" class="gallery-img">
+                        <img src="" alt="Wedding couple dancing" class="gallery-img">
                         <div class="img-overlay">
                             <h5>Sarah & Michael</h5>
                             <p class="mb-0">First Dance Moments</p>
