--- a/test2.html
+++ b/test2.html
@@ -315,7 +315,9 @@
                 <div class="col-md-4 col-sm-6" data-aos="fade-up">
                     <div class="gallery-img-container">
                         <span class="media-badge photo-badge">Photo</span>
+                        <a href="/frontend/allpack/photographers/photoimage/1.jpeg">
                         <img src="/frontend/allpack/photographers/photoimage/1.jpeg" alt="Wedding couple dancing" class="gallery-img">
+                        </a>
                         <div class="img-overlay">
                             <h5>Sarah & Michael</h5>
                             <p class="mb-0">First Dance Moments</p>
@@ -344,7 +346,9 @@
                 <div class="col-md-4 col-sm-6" data-aos="fade-up" data-aos-delay="200">
                     <div class="gallery-img-container">
                         <span class="media-badge photo-badge">Photo</span>
+                        <a href="/frontend/allpack/photographers/photoimage/2.jpg">
                         <img src="/frontend/allpack/photographers/photoimage/2.jpg" alt="Wedding reception" class="gallery-img">
+                        </a>
                         <div class="img-overlay">
                             <h5>Emily & James</h5>
                             <p class="mb-0">Reception Decor</p>
@@ -373,7 +377,9 @@
                 <div class="col-md-4 col-sm-6" data-aos="fade-up" data-aos-delay="100">
                     <div class="gallery-img-container">
                         <span class="media-badge photo-badge">Photo</span>
+                        <a href="/frontend/allpack/photographers/photoimage/3.jpeg">
                         <img src="/frontend/allpack/photographers/photoimage/3.jpeg" alt="First dance" class="gallery-img">
+                        </a>
                         <div class="img-overlay">
                             <h5>Sophia & William</h5>
                             <p class="mb-0">Sunset Portraits</p>
@@ -402,7 +408,9 @@
                 <div class="col-md-4 col-sm-6" data-aos="fade-up">
                     <div class="gallery-img-container">
                         <span class="media-badge photo-badge">Photo</span>
+                        <a href="/frontend/allpack/photographers/photoimage/5.jpg">
                         <img src="/frontend/allpack/photographers/photoimage/5.jpg" alt="Ceremony details" class="gallery-img">
+                        </a>
                         <div class="img-overlay">
                             <h5>Isabella & Henry</h5>
                             <p class="mb-0">Ceremony Details</p>
@@ -431,7 +439,9 @@
                 <div class="col-md-4 col-sm-6" data-aos="fade-up" data-aos-delay="200">
                     <div class="gallery-img-container">
                         <span class="media-badge photo-badge">Photo</span>
+                        <a href="/frontend/allpack/photographers/photoimage/6.jpg">
                         <img src="/frontend/allpack/photographers/photoimage/6.jpg" alt="Reception details" class="gallery-img">
+                        </a>
                         <div class="img-overlay">
                             <h5>Charlotte & Daniel</h5>
                             <p class="mb-0">Candlelit Reception</p>
