--- a/test2.html
+++ b/test2.html
@@ -448,6 +448,51 @@
                         </div>
                     </div>
                 </div>
+                <!-- Video 6 -->
+                <div class="col-md-4 col-sm-6" data-aos="fade-up" data-aos-delay="100">
+                    <div class="gallery-img-container">
+                        <span class="media-badge video-badge">Video</span>
+                        <video poster="/frontend/allpack/photographers/datavand/iv5.png" class="gallery-img">
+                            <source src="/frontend/allpack/photographers/datavand/v5.mp4" type="video/mp4">
+                        </video>
+                        <div class="video-play-btn">
+                            <i class="fas fa-play"></i>
+                        </div>
+                        <div class="img-overlay">
+                            <h5>Mia & Alexander</h5>
+                            <p class="mb-0">Love Story Film</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Photo 6 -->
+                <div class="col-md-4 col-sm-6" data-aos="fade-up">
+                    <div class="gallery-img-container">
+                        <span class="media-badge photo-badge">Photo</span>
+                        <a href="/frontend/allpack/photographers/photoimage/7.jpg">
+                        <img src="/frontend/allpack/photographers/photoimage/7.jpg" alt="Ceremony details" class="gallery-img">
+                        </a>
+                        <div class="img-overlay">
+                            <h5>Isabella & Henry</h5>
+                            <p class="mb-0">Ceremony Details</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Video 4 -->
+                <div class="col-md-4 col-sm-6" data-aos="fade-up" data-aos-delay="100">
+                    <div class="gallery-img-container">
+                        <span class="media-badge video-badge">Video</span>
+                        <video poster="/frontend/allpack/photographers/photoimage/iv8.png" class="gallery-img">
+                            <source src="/frontend/allpack/photographers/datavand/v6.mp4" type="video/mp4">
+                        </video>
+                        <div class="video-play-btn">
+                            <i class="fas fa-play"></i>
+                        </div>
+                        <div class="img-overlay">
+                            <h5>Mia & Alexander</h5>
+                            <p class="mb-0">Love Story Film</p>
+                        </div>
+                    </div>
+                </div>
             </div>
             
             <div class="text-center mt-5" data-aos="fade-up">
