--- a/frontend/allpack/photographers/photographers.html
+++ b/frontend/allpack/photographers/photographers.html
@@ -310,13 +310,14 @@
                     <p class="lead" data-aos="fade-up" data-aos-delay="100">A collection of our favorite moments from real weddings</p>
                 </div>
             </div>
-            
             <div class="row">
                 <!-- Photo 1 -->
                 <div class="col-md-4 col-sm-6" data-aos="fade-up">
                     <div class="gallery-img-container">
                         <span class="media-badge photo-badge">Photo</span>
-                        <img src="" alt="Wedding couple dancing" class="gallery-img">
+                        <a href="/frontend/allpack/photographers/photoimage/1.jpeg">
+                        <img src="/frontend/allpack/photographers/photoimage/1.jpeg" alt="Wedding couple dancing" class="gallery-img">
+                        </a>
                         <div class="img-overlay">
                             <h5>Sarah & Michael</h5>
                             <p class="mb-0">First Dance Moments</p>
@@ -345,7 +346,9 @@
                 <div class="col-md-4 col-sm-6" data-aos="fade-up" data-aos-delay="200">
                     <div class="gallery-img-container">
                         <span class="media-badge photo-badge">Photo</span>
-                        <img src="https://images.unsplash.com/photo-1518621736915-f3b1c41bfd00?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Wedding reception" class="gallery-img">
+                        <a href="/frontend/allpack/photographers/photoimage/2.jpg">
+                        <img src="/frontend/allpack/photographers/photoimage/2.jpg" alt="Wedding reception" class="gallery-img">
+                        </a>
                         <div class="img-overlay">
                             <h5>Emily & James</h5>
                             <p class="mb-0">Reception Decor</p>
@@ -374,7 +377,9 @@
                 <div class="col-md-4 col-sm-6" data-aos="fade-up" data-aos-delay="100">
                     <div class="gallery-img-container">
                         <span class="media-badge photo-badge">Photo</span>
-                        <img src="https://images.unsplash.com/photo-1518621736915-f3b1c41bfd00?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="First dance" class="gallery-img">
+                        <a href="/frontend/allpack/photographers/photoimage/3.jpeg">
+                        <img src="/frontend/allpack/photographers/photoimage/3.jpeg" alt="First dance" class="gallery-img">
+                        </a>
                         <div class="img-overlay">
                             <h5>Sophia & William</h5>
                             <p class="mb-0">Sunset Portraits</p>
@@ -403,7 +408,9 @@
                 <div class="col-md-4 col-sm-6" data-aos="fade-up">
                     <div class="gallery-img-container">
                         <span class="media-badge photo-badge">Photo</span>
-                        <img src="https://images.unsplash.com/photo-1515934751635-c81c6bc9a2d8?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Ceremony details" class="gallery-img">
+                        <a href="/frontend/allpack/photographers/photoimage/5.jpg">
+                        <img src="/frontend/allpack/photographers/photoimage/5.jpg" alt="Ceremony details" class="gallery-img">
+                        </a>
                         <div class="img-overlay">
                             <h5>Isabella & Henry</h5>
                             <p class="mb-0">Ceremony Details</p>
@@ -415,8 +422,8 @@
                 <div class="col-md-4 col-sm-6" data-aos="fade-up" data-aos-delay="100">
                     <div class="gallery-img-container">
                         <span class="media-badge video-badge">Video</span>
-                        <video poster="https://images.unsplash.com/photo-1518621736915-f3b1c41bfd00?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" class="gallery-img">
-                            <source src="https://www.youtube.com/embed/9bZkp7q19f0" type="video/mp4">
+                        <video poster="/frontend/allpack/photographers/datavand/iv4.png" class="gallery-img">
+                            <source src="/frontend/allpack/photographers/datavand/v4.mp4" type="video/mp4">
                         </video>
                         <div class="video-play-btn">
                             <i class="fas fa-play"></i>
@@ -432,7 +439,9 @@
                 <div class="col-md-4 col-sm-6" data-aos="fade-up" data-aos-delay="200">
                     <div class="gallery-img-container">
                         <span class="media-badge photo-badge">Photo</span>
-                        <img src="https://images.unsplash.com/photo-1519225421980-715cb0215aed?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Reception details" class="gallery-img">
+                        <a href="/frontend/allpack/photographers/photoimage/6.jpg">
+                        <img src="/frontend/allpack/photographers/photoimage/6.jpg" alt="Reception details" class="gallery-img">
+                        </a>
                         <div class="img-overlay">
                             <h5>Charlotte & Daniel</h5>
                             <p class="mb-0">Candlelit Reception</p>
