--- a/frontend/allpack/photographers/photographers.html
+++ b/frontend/allpack/photographers/photographers.html
@@ -319,8 +319,6 @@
                         <img src="/frontend/allpack/photographers/photoimage/1.jpeg" alt="Wedding couple dancing" class="gallery-img">
                         </a>
                         <div class="img-overlay">
-                            <h5>Sarah & Michael</h5>
-                            <p class="mb-0">First Dance Moments</p>
                         </div>
                     </div>
                 </div>
@@ -336,8 +334,6 @@
                             <i class="fas fa-play"></i>
                         </div>
                         <div class="img-overlay">
-                            <h5>Jessica & David</h5>
-                            <p class="mb-0">Ceremony Highlights</p>
                         </div>
                     </div>
                 </div>
@@ -350,8 +346,6 @@
                         <img src="/frontend/allpack/photographers/photoimage/2.jpg" alt="Wedding reception" class="gallery-img">
                         </a>
                         <div class="img-overlay">
-                            <h5>Emily & James</h5>
-                            <p class="mb-0">Reception Decor</p>
                         </div>
                     </div>
                 </div>
@@ -367,8 +361,6 @@
                             <i class="fas fa-play"></i>
                         </div>
                         <div class="img-overlay">
-                            <h5>Olivia & Ryan</h5>
-                            <p class="mb-0">Getting Ready Film</p>
                         </div>
                     </div>
                 </div>
@@ -381,8 +373,6 @@
                         <img src="/frontend/allpack/photographers/photoimage/3.jpeg" alt="First dance" class="gallery-img">
                         </a>
                         <div class="img-overlay">
-                            <h5>Sophia & William</h5>
-                            <p class="mb-0">Sunset Portraits</p>
                         </div>
                     </div>
                 </div>
@@ -398,8 +388,6 @@
                             <i class="fas fa-play"></i>
                         </div>
                         <div class="img-overlay">
-                            <h5>Ava & Benjamin</h5>
-                            <p class="mb-0">Reception Party</p>
                         </div>
                     </div>
                 </div>
@@ -412,8 +400,6 @@
                         <img src="/frontend/allpack/photographers/photoimage/5.jpg" alt="Ceremony details" class="gallery-img">
                         </a>
                         <div class="img-overlay">
-                            <h5>Isabella & Henry</h5>
-                            <p class="mb-0">Ceremony Details</p>
                         </div>
                     </div>
                 </div>
@@ -429,8 +415,6 @@
                             <i class="fas fa-play"></i>
                         </div>
                         <div class="img-overlay">
-                            <h5>Mia & Alexander</h5>
-                            <p class="mb-0">Love Story Film</p>
                         </div>
                     </div>
                 </div>
@@ -443,8 +427,45 @@
                         <img src="/frontend/allpack/photographers/photoimage/6.jpg" alt="Reception details" class="gallery-img">
                         </a>
                         <div class="img-overlay">
-                            <h5>Charlotte & Daniel</h5>
-                            <p class="mb-0">Candlelit Reception</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Video 6 -->
+                <div class="col-md-4 col-sm-6" data-aos="fade-up" data-aos-delay="100">
+                    <div class="gallery-img-container">
+                        <span class="media-badge video-badge">Video</span>
+                        <video poster="/frontend/allpack/photographers/datavand/iv5.png" class="gallery-img">
+                            <source src="/frontend/allpack/photographers/datavand/v5.mp4" type="video/mp4">
+                        </video>
+                        <div class="video-play-btn">
+                            <i class="fas fa-play"></i>
+                        </div>
+                        <div class="img-overlay">
+                        </div>
+                    </div>
+                </div>
+                <!-- Photo 6 -->
+                <div class="col-md-4 col-sm-6" data-aos="fade-up">
+                    <div class="gallery-img-container">
+                        <span class="media-badge photo-badge">Photo</span>
+                        <a href="/frontend/allpack/photographers/photoimage/7.jpg">
+                        <img src="/frontend/allpack/photographers/photoimage/7.jpg" alt="Ceremony details" class="gallery-img">
+                        </a>
+                        <div class="img-overlay">
+                        </div>
+                    </div>
+                </div>
+                <!-- Video 4 -->
+                <div class="col-md-4 col-sm-6" data-aos="fade-up" data-aos-delay="100">
+                    <div class="gallery-img-container">
+                        <span class="media-badge video-badge">Video</span>
+                        <video poster="/frontend/allpack/photographers/photoimage/iv8.png" class="gallery-img">
+                            <source src="/frontend/allpack/photographers/datavand/v6.mp4" type="video/mp4">
+                        </video>
+                        <div class="video-play-btn">
+                            <i class="fas fa-play"></i>
+                        </div>
+                        <div class="img-overlay">
                         </div>
                     </div>
                 </div>
@@ -480,7 +501,6 @@
                         </div>
                         <p class="testimonial-text">"Our wedding photos are absolutely stunning! The photographer captured every emotion and detail perfectly. We'll cherish these forever."</p>
                         <div class="client-info">
-                            <img src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80" alt="Sarah & Michael" class="client-img">
                             <div>
                                 <h6>Sarah & Michael</h6>
                                 <small>Photography Clients</small>
@@ -501,7 +521,6 @@
                         </div>
                         <p class="testimonial-text">"The wedding film brought us to tears! It perfectly captured the emotions of our day. We've watched it at least 20 times already!"</p>
                         <div class="client-info">
-                            <img src="https://images.unsplash.com/photo-1544005313-94ddf0286df2?ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80" alt="Jessica & David" class="client-img">
                             <div>
                                 <h6>Jessica & David</h6>
                                 <small>Videography Clients</small>
@@ -522,7 +541,6 @@
                         </div>
                         <p class="testimonial-text">"Booking both photography and videography was the best decision! The team worked seamlessly together to capture every angle of our day."</p>
                         <div class="client-info">
-                            <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80" alt="Emily & James" class="client-img">
                             <div>
                                 <h6>Emily & James</h6>
                                 <small>Photo + Video Clients</small>
@@ -543,7 +561,6 @@
                         </div>
                         <p class="testimonial-text">"The attention to detail in our wedding album is incredible. They captured moments we didn't even realize were happening."</p>
                         <div class="client-info">
-                            <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80" alt="Olivia & Ryan" class="client-img">
                             <div>
                                 <h6>Olivia & Ryan</h6>
                                 <small>Photography Clients</small>
@@ -564,7 +581,6 @@
                         </div>
                         <p class="testimonial-text">"Our highlight video is a masterpiece! It tells our love story beautifully and makes us relive the day every time we watch it."</p>
                         <div class="client-info">
-                            <img src="https://images.unsplash.com/photo-1519085360753-af0119f7cbe7?ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80" alt="Sophia & William" class="client-img">
                             <div>
                                 <h6>Sophia & William</h6>
                                 <small>Videography Clients</small>
@@ -585,7 +601,6 @@
                         </div>
                         <p class="testimonial-text">"The team made us feel so comfortable while capturing both photos and video. The results are natural, authentic and breathtaking!"</p>
                         <div class="client-info">
-                            <img src="https://images.unsplash.com/photo-1524504388940-b1c1722653e1?ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80" alt="Ava & Benjamin" class="client-img">
                             <div>
                                 <h6>Ava & Benjamin</h6>
                                 <small>Photo + Video Clients</small>
@@ -596,7 +611,6 @@
             </div>
         </div>
     </section>
-
     <!-- CTA Section -->
     <section class="py-5 bg-dark text-white">
         <div class="container py-4">
